# genl-client-server

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  flake.nix
libnl++/: CMakeLists.txt
libnl++/include/libnl++/: callback.hpp  common.hpp  genl.hpp  message.hpp  nlmgr.hpp  socket.hpp  util.hpp  wlanapp_common.hpp
libnl++/src/: genl.cpp  message.cpp  socket.cpp  util.cpp
src/: genl-app.cpp  main.cpp  wlanapp_common.hpp
src/nl/: callback.hpp  common.hpp  message.cpp  message.hpp  nlmgr.hpp  socket.cpp  socket.hpp  util.hpp
src/nl++/: common.hpp  message.cpp  message.hpp  socket.hpp  util.cpp
